Finish css part of the project

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -45,6 +45,7 @@ p{
 
 a{
   text-decoration: none;
+  color: black;
 }
 
 img{
@@ -85,4 +86,112 @@ table {
 
 th, td {
     padding: 15px;
+}
+
+ul.detallesProducto {
+    margin-left: 5%;
+    margin-top: 5%;
+}
+
+ul.ingredientes{
+  margin-left: 5%;
+}
+
+#orangeCrushLogo{
+  width: auto;
+  height: 300px;
+}
+
+#orangeCrushFoto{
+  width: auto;
+  height: 500px;
+}
+
+#fraseProducto{
+  text-align: center;
+}
+
+@print{
+
+  table, td, th {
+      border: 1px solid;
+      text-align: left;
+  }
+
+  table {
+      margin-top: 5%;
+      margin-bottom: 6%;
+      margin-left: auto;
+      margin-right: auto;
+      border-collapse: collapse;
+      width: 80%;
+  }
+
+  th, td {
+      padding: 15px;
+  }
+
+  ul.detallesProducto {
+      margin-left: 5%;
+      margin-top: 5%;
+  }
+
+  ul.ingredientes{
+    margin-left: 5%;
+  }
+
+  ul.menu {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      height: 100px;
+      overflow: hidden;
+  }
+
+  ul.menu li {
+      float: left;
+  }
+
+  ul.menu li a {
+      display: block;
+      margin-top: 30px;
+      font-size: 20px;
+      color: white;
+      padding: 14px 16px;
+      text-decoration: none;
+  }
+
+  h1{
+    font-size: 40px;
+    margin-top: 80px;
+    text-align: center;
+  }
+
+  p{
+    margin-left: 60px;
+    margin-right: 60px;
+    margin-top: 30px;
+  }
+
+  a{
+    text-decoration: none;
+    color: black;
+  }
+
+  img{
+    display: none;;
+    margin: auto;
+    margin-top: 5%;
+  }
+
+  footer {
+    margin-top: 2%;
+    padding: 14px 16px;
+    text-align: center;
+  }
+
+  footer p {
+    margin: auto;
+  }
+
 }
